fixed title height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ img {
 
 @media (max-width: 960px) {
   .showcase {
-    height: 70vh;
+    height: 90vh;
   }
 
   .hide-sm {
